tests/miniJava/neg/000145_mutation.MiniJava
class java { public static class java { } void Main ( String [ ] java ) { { } } }
